fix: center align text inside cells

--- a/main.css
+++ b/main.css
@@ -128,6 +128,7 @@ button:hover, button:focus {
   box-shadow: 3px 5px 4px #c1a8a4;
   background-color: white;
   height: auto;
+  align-items: center;
 }
 
 #weekly-plan h2{
@@ -196,10 +197,11 @@ button:hover, button:focus {
 
 .meal-grid {
   display: grid;
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   gap: 1rem;
   transition: all 0.3s ease;
   padding: 1rem;
+  align-items: start;
 }
 
 .meal-cell {
@@ -210,7 +212,9 @@ button:hover, button:focus {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  
+  justify-content: flex-start;
+  transition: all 0.3s ease;
+   text-align: center;
 }
 
 
